<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/comment_bg"
    android:gravity="center"
    android:padding="15dip"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dip"
        android:text="@string/item_dialog_text"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_red_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/btn_selector"
        android:text="@string/text_color_red"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_black_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/btn_selector"
        android:text="@string/text_color_black"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_white_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/btn_selector"
        android:text="@string/text_color_white"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_blue_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/btn_selector"
        android:text="@string/text_color_blue"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_cancel_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/btn_selector_cancel_comment"
        android:text="@string/confirm_cancel"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>