<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/modify_password_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:text="@string/modify_title"
        android:textColor="#333333"
        android:textSize="14sp" >
    </TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"
        android:background="@drawable/line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/modify_old"
            android:textColor="#333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/modify_new"
            android:textColor="#333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/modify_confirm"
            android:textColor="#333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:background="@drawable/modify_ok_selector"
            android:text="@string/confirm_ok"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:background="@drawable/modify_cancel_selector"
            android:text="@string/confirm_cancel"
            android:textColor="#899ba9"
            android:textSize="14sp" >
        </Button>
    </LinearLayout>

</LinearLayout>