<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
	<RelativeLayout
        android:id="@+id/head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg" >
		
		<org.cmaaio.common.XButton
		    android:id="@+id/backBt"
            android:layout_width="60dip"
            android:layout_height="40dip"
            android:background="@drawable/btn_top_normal"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:text="@string/confirm_cancel"/>
		
       <TextView
            android:id="@+id/b"
            style="@style/gd_netset_text_title"
            android:layout_width="@dimen/gd_netset_text_w"
            android:layout_height="@dimen/gd_netset_text_h"
            android:layout_centerInParent="true"
            android:ellipsize="marquee"
            android:gravity="center_vertical|center_horizontal|center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/text_edit" />
        <org.cmaaio.common.XButton
		    android:id="@+id/commitBt" 
		    android:layout_width="60dip"
		    android:layout_height="40dip"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		     android:layout_marginRight="5dip"
		    android:text="@string/confirm_ok"
		    android:background="@drawable/btn_top_normal" />
    </RelativeLayout>
</LinearLayout>