<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <requestFocus />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_activity_update_type"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            style="@style/gd_all_text"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/login_icon_account"
            android:drawablePadding="10dip"
            android:hint="@string/login_user_name_hint"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="#909090" />

        <EditText
            android:id="@+id/password"
            style="@style/gd_all_text"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/login_icon_password"
            android:drawablePadding="10dip"
            android:hint="@string/login_password_hint"
            android:padding="10dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="#909090" />

        <LinearLayout
            android:id="@+id/wife_download"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/gd_playset_play_auto_h"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <org.cmaaio.ui.SlipButton
                android:id="@+id/netset_myslipswitch"
                android:layout_width="@dimen/gd_slip_bottom_w"
                android:layout_height="@dimen/gd_slip_bottom_h"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/ss"
                style="@style/gd_all_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/netset_myslipswitch"
                android:layout_alignTop="@id/netset_myslipswitch"
                android:gravity="center_vertical"
                android:text="@string/login_mess" />
        </LinearLayout>

        <Button
            android:id="@+id/btn"
            style="@style/login_text_title"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_but"
            android:text="@string/login" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_activity_update_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dip"
        android:layout_marginRight="8dip"
        android:textColor="@color/gary"
        android:textSize="14dip"
        tools:text="Test login activity update type" />

</RelativeLayout>