<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/more_info" >

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg" >

        <Button
            android:id="@+id/backib"
            android:layout_width="60dip"
            android:layout_height="40dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/reflesh_button_selector"
            android:text="@string/back" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/gd_netset_text_title"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/gd_netset_text_h"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dip"
            android:ellipsize="end"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/modify_mb" />

        <org.cmaaio.common.XButton
            android:id="@+id/btn_save"
            android:layout_width="60dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/reflesh_button_selector"
            android:text="@string/save" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/head"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_tel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:drawableLeft="@drawable/staffphone"
                android:gravity="right|center_vertical"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        layout="@layout/tabbar" />

</RelativeLayout>